
  would print the GJS help.

  Now, all arguments meant for GJS itself must come _before_ the name of the
  script to execute or any script given with a "-c" argument. Any arguments
  _after_ the filename or script are passed on to the script. This is the way
  that Python handles its command line arguments as well.

  If you previously relied on any -I arguments after your script being added to
  the search path, then you should either reorder those arguments, or handle -I
  inside your script, adding paths to imports.searchPath manually.

Version 1.44.0
--------------

- Add Lang.Interface and GObject.Interface [Philip Chimento, Roberto Goizueta,
  #751343, #752984]
- Support callbacks with (transfer full) return types [Debarshi Ray, #750286]
- Add binding for setlocale() [Philip Chimento, #753072]
- Improve support to generate code coverage reports [Sam Spilsbury, #743009,
  #743007, #742362, #742535, #742797, #742466, #751732]
- Report errors from JS property getters/setters [Matt Watson, #730101]
- Fix crash when garbage collection triggers while inside an init function
  [Sam Spilsbury, #742517]
- Port to CallReceiver/CallArgs [Tim Lunn, #742249]
- Misc bug fixes [Ting-Wei Lan, #736979, #753072] [Iain Lane, #750688]
  [Jasper St. Pierre] [Philip Chimento] [Colin Walters]

Version 1.43.3
--------------

- GTypeClass and GTypeInterface methods, such as
  g_object_class_list_properties(), are now available [#700347]
- Added full automatic support for GTK widget templates [#700347,
  #737661] [Jonas Danielsson, #739739]
- Added control of JS Date caches to system module [#739790]
- Misc bug fixes and memory leak fixes [Owen Taylor, #738122]
  [Philip Chimento, #740696, #737701]

Version 1.42.0
--------------

- Fix a regression caused by PPC fixes in 1.41.91

Version 1.41.91
---------------

- Added the ability to disable JS language warnings [Lionel Landwerlin,
  #734569]
- Fixed crashes in PPC (and probably other arches) due to invalid